# Fitzpatrick-image-optimizer

./: .gitignore  AGENTS.md  CHANGES.md  PLAN.md  README.md  design.md  docs.md  progress.md  pyproject.toml
.github/workflows/: ci.yml
data/: data_load.py  labels.csv  pre-training.md  training_preprocess.py
data/custom/: create_grid.py  labels.csv
docs/: model-card.md  models.md  reproducibility.md  results-schema.md
src/: __init__.py  evaluate_deeplpf.py  evaluate_retinex.py  infer_deeplpf.py  infer_retinex.py  train_deeplpf.py  train_retinex.py  utils.py
src/fitzpatrick_optimizer/: cli.py  config.py  data.py  demo.py  evaluate.py  imaging.py  infer.py  metrics.py  randomness.py  splits.py  train.py
src/fitzpatrick_optimizer/models/: __init__.py  baseline.py  illumination_unet.py  residual_filter.py
tests/: test_cli.py  test_data.py  test_demo.py  test_metrics.py  test_models.py  test_splits.py
